--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@pravega/pravega",
+    "name": "@thekingofcity/pravega",
     "version": "0.3.2",
     "description": "Pravega client",
     "main": "dist/cjs/stream_manager.js",
