create release page on tag push
Signed-off-by: thekingofcity <3353040+thekingofcity@users.noreply.github.com>

--- a/.github/workflows/tagPublish.yml
+++ b/.github/workflows/tagPublish.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           ref: ${{ github.event.release.tag_name }}
       - name: Set release version
-        # Set release version in all three os, the commented run should suffice for linux and mac.
+        # Set release version env in all three os, the commented command only works in linux and mac.
         run: python3 -c "import os; tag = os.environ['GITHUB_REF'].split('/')[-1]; f = open(os.environ['GITHUB_ENV'], 'a'); f.write('RELEASE_VERSION='+tag); f.close();"
         # run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
@@ -75,15 +75,15 @@ jobs:
         working-directory: ./nodejs
         run: npm i
 
-      - name: Build js
-        working-directory: ./nodejs
-        run: npm run release-js
       - name: Tweak package.json
         working-directory: ./nodejs
         # This will update the package version to tag version and
         # add an install script in package.json so users who `npm i` this package
         # will trigger the node-pre-gyp to pull the os and arch specific binary.
         run: python3 -c "import os; import json; p = json.load(open('package.json')); p['scripts']['install'] = 'node-pre-gyp install'; p['version'] = os.environ['RELEASE_VERSION']; json.dump(p, open('package.json', 'w'), indent=2, ensure_ascii=False);"
+      - name: Compile for esm and commonjs
+        working-directory: ./nodejs
+        run: npm run release-js
       - name: Publish to npm
         working-directory: ./nodejs
         # `--access public` is used to publish to my account's scope.
@@ -115,7 +115,7 @@ jobs:
         with:
           ref: ${{ github.event.release.tag_name }}
       - name: Set release version
-        # Set release version in all three os, the commented run should suffice for linux and mac.
+        # Set release version env in all three os, the commented command only works in linux and mac.
         run: python3 -c "import os; tag = os.environ['GITHUB_REF'].split('/')[-1]; f = open(os.environ['GITHUB_ENV'], 'a'); f.write('RELEASE_VERSION='+tag); f.close();"
         # run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
@@ -161,10 +161,13 @@ jobs:
       - name: Build native
         working-directory: ./nodejs
         run: npm run release-native
-      - name: Pacakge the asset
+      - name: Package the asset
         working-directory: ./nodejs
         # This will make a node-pre-gyp package.
         run: npx node-pre-gyp package
+      - name: Create Github release page
+        # Create the release page first or the following upload will fail
+        run: gh release create ${{ env.RELEASE_VERSION }} --draft --notes "Auto created by tagPublish workflow."
       - name: Upload to Github releases
         working-directory: ./nodejs
         # Use bash, even on Windows to make find available
