--- a/.github/workflows/tagPublish.yml
+++ b/.github/workflows/tagPublish.yml
@@ -10,9 +10,11 @@ jobs:
     name: Create Github release page
     runs-on: ubuntu-latest
     steps:
+      - name: Set release version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Create Github release page
         # Create the release page first or the nodejs artifacts upload will fail
-        run: gh release create ${{ github.event.release.tag_name }} --draft --notes "Auto created by tagPublish workflow."
+        run: gh release create ${{ env.RELEASE_VERSION }} --draft --notes "Auto created by tagPublish workflow."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
